@@ -101,14 +101,6 @@ KWDisplayFont* KWFormat::loadFont( KWordDocument *_doc )
 {
   KWDisplayFont *font = _doc->findDisplayFont( userFont, ptFontSize, weight, italic, underline );
   return font;
-
-//     KWUserFont* uf = userFont;
-//     if ( !uf )
-//       uf = _doc->getDefaultUserFont(); 
-//     assert( uf );
-    
-//     font = new KWDisplayFont( _doc, uf, ptFontSize, weight, italic, underline );
-//     return font;
 }
 
 void KWFormat::apply( KWFormat &_format )
@@ -211,10 +203,7 @@ void KWFormat::load(KOMLParser& parser,vector<KOMLAttrib>& lst,KWordDocument *_d
 	  for(;it != lst.end();it++)
 	    {
 	      if ((*it).m_strName == "name")
-		{
-		  //if (userFont) delete userFont;
-		  userFont = _doc->findUserFont((*it).m_strValue.c_str());
-		}
+		userFont = _doc->findUserFont((*it).m_strValue.c_str());
 	    }
 	}
 
