@@ -100,6 +100,10 @@ public:
   KWParagLayout::Border &getRightBorder() { return brd_right; }
   KWParagLayout::Border &getTopBorder() { return brd_top; }
   KWParagLayout::Border &getBottomBorder() { return brd_bottom; }
+  KWParagLayout::Border getLeftBorder2() { return brd_left; }
+  KWParagLayout::Border getRightBorder2() { return brd_right; }
+  KWParagLayout::Border getTopBorder2() { return brd_top; }
+  KWParagLayout::Border getBottomBorder2() { return brd_bottom; }
   void setLeftBorder(KWParagLayout::Border _brd) { brd_left = _brd; }
   void setRightBorder(KWParagLayout::Border _brd) { brd_right = _brd; }
   void setTopBorder(KWParagLayout::Border _brd) { brd_top = _brd; }
